src/errors/examples/metric-error-example.ts
export const MetricErrorExample = {
  badRequest: {
    message: [
      'timeString must be a valid ISO 8601 date string',
      'hours must be a number string',
    ],
    error: 'Bad Request',
    statusCode: 400,
  },
};
